refactor: new database access structure
