# pkg/api/networks.go
@@ -1,50 +1,28 @@
 package api
 
 import (
-	"context"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/koodeyo/koodnet/pkg/database"
 	"github.com/koodeyo/koodnet/pkg/models"
-	"gorm.io/gorm"
 )
-
-type NetworkRepository interface {
-	FindNetworks(c *gin.Context)
-	CreateNetwork(c *gin.Context)
-	FindNetwork(c *gin.Context)
-	UpdateNetwork(c *gin.Context)
-	DeleteNetwork(c *gin.Context)
-}
-
-// networkRepository holds shared resources like database and context
-type networkRepository struct {
-	db  *gorm.DB
-	ctx *context.Context
-}
-
-// NewAppContext creates a new AppContext
-func newNetworkRepository(db *gorm.DB, ctx *context.Context) *networkRepository {
-	return &networkRepository{
-		db:  db,
-		ctx: ctx,
-	}
-}
 
 // FindNetworks godoc
 // @Summary Get all networks
 // @Description Get a list of all networks with optional pagination
 // @Tags networks
 // @Produce json
-// @Param offset query int false "Offset for pagination" default(0)
-// @Param limit query int false "Limit for pagination" default(10)
-// @Success 200 {object} api.collectionResponse[models.Network]
+// @Param page query int false "page for pagination" default(1)
+// @Param page_size query int false "page_size for pagination" default(10)
+// @Success 200 {object} api.paginatedResponse[models.Network]
 // @Router /networks [get]
-func (r *networkRepository) FindNetworks(c *gin.Context) {
+func FindNetworks(c *gin.Context) {
 	var networks []models.Network
 
 	// Fetch data from the database
-	r.db.Scopes(models.Paginate(c)).Find(&networks)
+	database.Conn.Scopes(models.Paginate(c)).Find(&networks)
 
 	response := paginated(networks, c)
 
@@ -52,22 +30,24 @@ func (r *networkRepository) FindNetworks(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
-// CreateNetwork implements NetworkRepository.
-func (r *networkRepository) CreateNetwork(c *gin.Context) {
+func CreateNetwork(c *gin.Context) {
+	network := models.Network{
+		ID: uuid.New().String(),
+	}
+
+	database.Conn.Create(&network)
+
 	panic("unimplemented")
 }
 
-// DeleteNetwork implements NetworkRepository.
-func (r *networkRepository) DeleteNetwork(c *gin.Context) {
+func DeleteNetwork(c *gin.Context) {
 	panic("unimplemented")
 }
 
-// FindNetwork implements NetworkRepository.
-func (r *networkRepository) FindNetwork(c *gin.Context) {
+func FindNetwork(c *gin.Context) {
 	panic("unimplemented")
 }
 
-// UpdateNetwork implements NetworkRepository.
-func (r *networkRepository) UpdateNetwork(c *gin.Context) {
+func UpdateNetwork(c *gin.Context) {
 	panic("unimplemented")
 }
